<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nebososo.dolphindroid.ControllerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.gesture.GestureOverlayView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/gesture_ir"
            android:layout_weight="2"></android.gesture.GestureOverlayView>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ul"
                    android:id="@+id/button_ul"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/up"
                    android:id="@+id/button_up"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ur"
                    android:id="@+id/button_ur"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/left"
                    android:id="@+id/button_left"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/button_middle"
                    android:layout_weight="1"
                    android:visibility="invisible"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/right"
                    android:id="@+id/button_right"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dl"
                    android:id="@+id/button_dl"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/down"
                    android:id="@+id/button_down"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dr"
                    android:id="@+id/button_dr"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:id="@+id/button_a"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/b"
                    android:id="@+id/button_b"
                    android:layout_column="1"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:id="@+id/button_minus"
                    android:layout_column="0"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:id="@+id/button_home"
                    android:layout_column="1"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plus"
                    android:id="@+id/button_plus"
                    android:layout_column="2"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:id="@+id/button_1"
                    android:layout_column="0"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/two"
                    android:id="@+id/button_2"
                    android:layout_column="1"
                    android:layout_weight="1" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>
